2011-07-22 Roman
- FIX:DAQ.JavaLikeCalc: Return zero-length string for value 0 to user API function toString().


2011-07-21 Roman
- FIX:UI.WebVision: The primitive's "Diagram" mode "Spectrum" display is fixed for labels display.
    Style "input[type=\"checkbox\"]" is added for CheckBox of "FormEl" display fix.


2011-07-20 Roman
- !!!!:FIX:Archive.FSArch: Read data from archive's file buffer and buffer limit exceeding into the fast bits calc algorithm is fixed.
    Place offsets to cache from the fast bits calc algorithm is fixed.
- DAQ.DAQGate: Return of the distributed synchronization mechanism for periodic acquisition.
- FIX:SYS.Archive: Transparently request to archive's data for all archivators is fixed for get less quality archivators with data.
- Special.FLibSYS, DAQ.SoundCard, DAQ.AMRDevs, DAQ.BFN, Transport.Serial, UI.Vision, UI.QTStarter:
    German translation is updated by Irina Popkova.


2011-07-19 Roman
- Archive.FSArch: The module options --noArchLimit and --copyErrValFiles is added.
    The option --noArchLimit used for disable archive's files removing by limit on view archives run mode.
    The option --copyErrValFiles used for enable copy error archive's files to debug correction algorithm.
- DAQ.JavaLikeCalc: String constants direct concatenation is added.
- DAQ.ModBus: Templates calc on start mode and no connection with remote PLC is added.
- UI.VCAEngine, UI.Vision: The attribute "valsForPix" is added to primitive "Diagram" for precision control for export to CSV at large time intervals.


2011-07-16 Roman
- UI.Vision: Screens counter display only on any UI.Vision window open.
    Made for crash prevent on UI.QTStarter miss or not init.


2011-07-15 Roman
- !!:TConfig, TBD, TTransportIn, TTransportOut, TUser, TGroup, TPrmTmplLib, TPrmTempl, TParamContr, TController, TVArchive, TVArchivator, TMArchivator:
    User API functions for config access cfg() and cfgSet() is added.
- TConfig: Generic function get() and set() is added.